Feature ETP-868: Fix session issues.